[package]
name = "zenode"
version = "0.1.0"
edition = "2021"
author = "Ges2017"
description = "Abstraction layer on top of p2panda and graphql to easily create schemas and perform operations on a p2panda node"
license = "MIT"
homepage = "https://github.com/Gers2017/zenode"
readme = "README.md"
repository = "https://github.com/Gers2017/zenode"
keywords = ["p2panda", "peer-to-peer", "schema", "aquadoggo", "async"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gql_client = "1.0.6"
hex = "0.4.3"
p2panda-rs = "0.6.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["rt", "rt-multi-thread", "macros"] }
