[package]
name = "pampam"
version = "0.1.0"
edition = "2021"
authors = ["Gers2017"]
description = "Cli tool to send operations to a p2panda node powered by zenode"
license = "MIT"

[dependencies]
clap = { version = "4.1.11", features = ["derive", "cargo"] }
nom = "7.1.3"
zenode = { path = ".." }
tokio = { version = "1.21.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.159", features = ["derive"] }
